--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -184,8 +184,7 @@
                         </div>
 
                         <div class="high-fi-frames">
-                            <img src="../img/stitched/hi-fi/1-login.png"
-                                alt="Stitched 'login' hi fidelity wireframe.">
+                            <img src="../img/stitched/hi-fi/1-login.png" alt="Stitched 'login' hi fidelity wireframe.">
 
                             <img src="../img/stitched/hi-fi/2-sign-up.png"
                                 alt="Stitched 'sign up' hi fidelity wireframe.">
@@ -230,20 +229,15 @@
                         </div>
 
                         <div class="mockups">
-                            <img src="../img/stitched/mockups/1-image-login.png"
-                                alt="Stitched 'login' mockup">
+                            <img src="../img/stitched/mockups/1-image-login.png" alt="Stitched 'login' mockup">
 
-                            <img src="../img/stitched/mockups/2-image-sign-up.png"
-                                alt="Stitched 'sign up' mockup">
+                            <img src="../img/stitched/mockups/2-image-sign-up.png" alt="Stitched 'sign up' mockup">
 
-                            <img src="../img/stitched/mockups/3-image-upload.png"
-                                alt="Stitched 'upload' mockup">
+                            <img src="../img/stitched/mockups/3-image-upload.png" alt="Stitched 'upload' mockup">
 
-                            <img src="../img/stitched/mockups/4-image-gallery.png"
-                                alt="Stitched 'gallery' mockup">
+                            <img src="../img/stitched/mockups/4-image-gallery.png" alt="Stitched 'gallery' mockup">
 
-                            <img src="../img/stitched/mockups/5-image-product.png"
-                                alt="Stitched 'product' mockup">
+                            <img src="../img/stitched/mockups/5-image-product.png" alt="Stitched 'product' mockup">
 
                             <img src="../img/stitched/mockups/6-image-customer-reviews.png"
                                 alt="Stitched 'customer-reviews' mockup">
@@ -251,14 +245,11 @@
                             <img src="../img/stitched/mockups/7-image-your-review.png"
                                 alt="Stitched 'your-review' mockup">
 
-                            <img src="../img/stitched/mockups/8-image-basket.png"
-                                alt="Stitched 'basket' mockup">
+                            <img src="../img/stitched/mockups/8-image-basket.png" alt="Stitched 'basket' mockup">
 
-                            <img src="../img/stitched/mockups/9-image-payment.png"
-                                alt="Stitched 'payment' mockup">
+                            <img src="../img/stitched/mockups/9-image-payment.png" alt="Stitched 'payment' mockup">
 
-                            <img src="../img/stitched/mockups/10-image-search.png"
-                                alt="Stitched 'search' mockup">
+                            <img src="../img/stitched/mockups/10-image-search.png" alt="Stitched 'search' mockup">
                         </div>
                     </div>
                 </div>
@@ -289,21 +280,16 @@
             <h2>Get in Touch</h2>
 
             <div>
-                <p class="phone">Mobile number: <a href="tel:+123456789">+12 3456789</a></p>
-            </div>
-
-            <div>
-                <a href="mailto:email@email.com" class="button email">Email Me</a>
+                <a href="https://form.jotform.com/233566363365361" class="button email" target="_blank">Email Me</a>
             </div>
 
             <div>
                 <ul>
-                    <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    </li>
-                    <li><a href="https://www.behance.net" target="_blank"><i
+                    <li><a href="https://www.behance.net/vivi205" target="_blank"><i
                                 class="fa-brands fa-square-behance"></i></a></li>
+                    <li><a href="https://github.com/VioletViolaVi" target="_blank"><i
+                                class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/vivian-c-0164291a9/"><i class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
             </div>
 
