--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -320,21 +320,16 @@
             <h2>Get in Touch</h2>
 
             <div>
-                <p class="phone">Mobile number: <a href="tel:+123456789">+12 3456789</a></p>
-            </div>
-
-            <div>
-                <a href="mailto:email@email.com" class="button email">Email Me</a>
+                <a href="https://form.jotform.com/233566363365361" class="button email" target="_blank">Email Me</a>
             </div>
 
             <div>
                 <ul>
-                    <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    </li>
-                    <li><a href="https://www.behance.net" target="_blank"><i
+                    <li><a href="https://www.behance.net/vivi205" target="_blank"><i
                                 class="fa-brands fa-square-behance"></i></a></li>
+                    <li><a href="https://github.com/VioletViolaVi" target="_blank"><i
+                                class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/vivian-c-0164291a9/"><i class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
             </div>
 
