--- a/about.html
+++ b/about.html
@@ -66,6 +66,11 @@
                             feedback from users expressing their pain points, so I can improve on my designs. These
                             skills and experiences make me excited to pursue a career as a UI Designer.
                         </p>
+
+                        <div class="cv-container">
+                            <a href="files/website-resume.pdf" class="button" download>Download my cv</a>
+                            <a href="files/website-resume.pdf" class="button" target="_blank">View my cv</a>
+                        </div>
                     </div>
 
                     <div class="skills-column">
@@ -119,7 +124,8 @@
                                 class="fa-brands fa-square-behance"></i></a></li>
                     <li><a href="https://github.com/VioletViolaVi" target="_blank"><i
                                 class="fa-brands fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/vivian-c-0164291a9/"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/vivian-c-0164291a9/"><i
+                                class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
             </div>
 
