--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                         </p>
 
                         <div class="cv-container">
-                            <a href="files/website-resume.pdf" class="button" download>Download my cv</a>
+                            <a href="files/website-resume.pdf" class="button" download>Download my cv <i class="fa-solid fa-download"></i></a>
                             <a href="files/website-resume.pdf" class="button" target="_blank">View my cv</a>
                         </div>
                     </div>
