Update footer links

--- a/about.html
+++ b/about.html
@@ -68,7 +68,8 @@
                         </p>
 
                         <div class="cv-container">
-                            <a href="files/website-resume.pdf" class="button" download>Download my cv <i class="fa-solid fa-download"></i></a>
+                            <a href="files/website-resume.pdf" class="button" download>Download my cv <i
+                                    class="fa-solid fa-download"></i></a>
                             <a href="files/website-resume.pdf" class="button" target="_blank">View my cv</a>
                         </div>
                     </div>
@@ -124,7 +125,7 @@
                                 class="fa-brands fa-square-behance"></i></a></li>
                     <li><a href="https://github.com/VioletViolaVi" target="_blank"><i
                                 class="fa-brands fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/vivian-c-0164291a9/"><i
+                    <li><a href="https://www.linkedin.com/in/vivian-c-0164291a9/" target="_blank"><i
                                 class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
             </div>
