--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -329,7 +329,8 @@
                                 class="fa-brands fa-square-behance"></i></a></li>
                     <li><a href="https://github.com/VioletViolaVi" target="_blank"><i
                                 class="fa-brands fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/vivian-c-0164291a9/"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/vivian-c-0164291a9/" target="_blank"><i
+                                class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
             </div>
 
