--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
                 <p>
                     I have a strong interest in web design and can create user centric web designs that are intuitive
                     and easy to use. I enjoy the challenge of designing wireframes for responsive web apps then
-                    receiving
-                    feedback from users expressing their pain points, so I can improve on my designs. Also, I'm a self
-                    taught Web Developer who's familiar with how websites are built with HTML5, CSS3 and JavaScript ES6
-                    and how the client side is responsible for displaying information on device screens for users to
-                    see.
+                    receiving feedback from users expressing their pain points, so I can improve on my designs.
+                </p>
+
+                <p>
+                    Also, I'm a self taught Web Developer who's familiar with how websites are built with HTML5, CSS3
+                    and JavaScript ES6 and how the client side is responsible for displaying information on device
+                    screens for users to see.
                 </p>
             </div>
         </section>
