--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
         <div class="container">
             <div>
                 <picture>
-                    <source media="(min-width:992px)" srcset="img/self-portrait/big-screens/self-portrait.png">
-                    <img src="img/self-portrait/small-screens/self-portrait.png" alt="Image of Vivian.">
+                    <source media="(min-width:992px)" srcset="img/self-portrait/big-screens/self-portrait.webp">
+                    <img src="img/self-portrait/small-screens/self-portrait.webp" alt="Image of Vivian.">
                 </picture>
 
                 <div class="row self-info-container">
@@ -66,12 +66,6 @@
                             feedback from users expressing their pain points, so I can improve on my designs. These
                             skills and experiences make me excited to pursue a career as a UI Designer.
                         </p>
-
-                        <div class="cv-container">
-                            <a href="files/website-resume.pdf" class="button" download>Download my cv <i
-                                    class="fa-solid fa-download"></i></a>
-                            <a href="files/website-resume.pdf" class="button" target="_blank">View my cv</a>
-                        </div>
                     </div>
 
                     <div class="skills-column">
