--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body id="aboutPage">
     <header id="nav">
         <div class="container">
-            <a href="../index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="img/logos/logo.png" alt="Logo Vivian">
             </a>
 
