--- a/index.html
+++ b/index.html
@@ -286,7 +286,10 @@
                             <h3>Animation with CSS3</h3>
 
                             <p>
-                                I animated this using keyframes in CSS3 animations.
+                                I animated this image using keyframes in CSS3 animations.
+                                Keyframes were used to make the snow fall, using the transform and animation property.
+                                Keyframes were also used to change the colour of the leaves and jumper at different
+                                percentage points.
                             </p>
                         </div>
                     </div>
