Add more space between project sections

--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <!-- low fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Low-fi wireframes</h3>
                         </div>
@@ -165,7 +165,7 @@
                     </div>
 
                     <!-- mid fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Mid-fi wireframes</h3>
                         </div>
@@ -254,7 +254,7 @@
                     </div>
 
                     <!-- hi fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Hi-fi wireframes</h3>
                         </div>
@@ -342,7 +342,7 @@
                     </div>
 
                     <!-- mockups -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Mockups</h3>
                         </div>
