--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -78,7 +78,7 @@
                     </div>
 
                     <!-- low fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Low-fi wireframes</h3>
                         </div>
@@ -106,7 +106,7 @@
                     </div>
 
                     <!-- mid fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Mid-fi wireframes</h3>
                         </div>
@@ -141,7 +141,7 @@
                     </div>
 
                     <!-- hi fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Hi-fi wireframes</h3>
                         </div>
@@ -187,7 +187,7 @@
                     </div>
 
                     <!-- mockups -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Mockups</h3>
                         </div>
