--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -78,7 +78,7 @@
                     </div>
 
                     <!-- low fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Low-fi wireframes</h3>
                         </div>
@@ -124,7 +124,7 @@
                     </div>
 
                     <!-- mid fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Mid-fi wireframes</h3>
                         </div>
@@ -171,7 +171,7 @@
                     </div>
 
                     <!-- hi fi -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Hi-fi wireframes</h3>
                         </div>
@@ -216,7 +216,7 @@
                     </div>
 
                     <!-- mockups -->
-                    <div>
+                    <div class="project-spacing">
                         <div>
                             <h3>Mockups</h3>
                         </div>
