--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -18,7 +18,7 @@
     <header id="nav">
         <div class="container">
             <a href="../index.html" class="logo">
-                <img src="../img/logos/logo.png" alt="Logo Vivian">
+                <img src="../img/logos/logo.svg" alt="Logo Vivian">
             </a>
 
             <nav>
