Add script element to remaining pages.

--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -297,6 +297,8 @@
             <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
+
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
