--- a/about.html
+++ b/about.html
@@ -127,6 +127,8 @@
             <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
