--- a/projects/frugalityfirst.html
+++ b/projects/frugalityfirst.html
@@ -334,6 +334,8 @@
             <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
+
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
