--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -337,6 +337,8 @@
             <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
+
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
