--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -298,6 +298,10 @@
         </div>
     </footer>
 
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
     <script src="../js/scripts.js"></script>
 </body>
 
