--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="homePage">
-    <header id="nav">
+    <header id="bigNav">
         <div class="container">
             <a href="index.html" class="logo">
                 <img src="img/logos/logo.svg" alt="Logo Vivian">
