Create navbar for small screens

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 </head>
 
 <body id="homePage">
+    <header id="smallNav">
+        <div class="container">
+            <nav>
+                <a href="index.html" class="logo">
+                    <img src="img/logos/logo.svg" alt="Logo Vivian">
+                </a>
+                <i class="fa-solid fa-bars"></i>
+            </nav>
+        </div>
+    </header>
+
     <header id="bigNav">
         <div class="container">
             <a href="index.html" class="logo">
