--- a/about.html
+++ b/about.html
@@ -15,7 +15,18 @@
 </head>
 
 <body id="aboutPage">
-    <header id="nav">
+    <header id="smallNav">
+        <div class="container">
+            <nav>
+                <a href="index.html" class="logo">
+                    <img src="img/logos/logo.svg" alt="Logo Vivian">
+                </a>
+                <i class="fa-solid fa-bars"></i>
+            </nav>
+        </div>
+    </header>
+
+    <header id="bigNav">
         <div class="container">
             <a href="index.html" class="logo">
                 <img src="img/logos/logo.svg" alt="Logo Vivian">
