--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
                 <a href="index.html" class="logo">
                     <img src="img/logos/logo.svg" alt="Logo Vivian">
                 </a>
-                <i class="fa-solid fa-bars"></i>
+                <ul>
+                    <li><i class="fa-solid fa-bars"></i></li>
+                    <li><a href="index.html">Work</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </nav>
         </div>
     </header>
