Update navbars for both small and large screens

--- a/index.html
+++ b/index.html
@@ -15,35 +15,44 @@
 </head>
 
 <body id="homePage">
-    <header id="smallNav">
-        <div class="container">
-            <nav>
+    <!-- modal overlay -->
+    <div class="overlay"></div>
+
+    <header>
+        <div id="smallNav">
+            <!-- logo & menu icon -->
+            <nav class="logo-and-bars">
                 <a href="index.html" class="logo">
                     <img src="img/logos/logo.svg" alt="Logo Vivian">
                 </a>
+
+                <i class="fa-solid fa-bars"></i>
+            </nav>
+
+            <!-- menu links -->
+            <nav class="links">
                 <ul>
-                    <li><i class="fa-solid fa-bars"></i></li>
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
-    </header>
 
-    <header id="bigNav">
-        <div class="container">
-            <a href="index.html" class="logo">
-                <img src="img/logos/logo.svg" alt="Logo Vivian">
-            </a>
+        <div id="bigNav">
+            <div class="container">
+                <a href="index.html" class="logo">
+                    <img src="img/logos/logo.svg" alt="Logo Vivian">
+                </a>
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Work</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
