--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -15,30 +15,44 @@
 </head>
 
 <body id="healthyEatsPage">
-    <header id="smallNav">
-        <div class="container">
-            <nav>
+    <!-- modal overlay -->
+    <div class="overlay"></div>
+
+    <header>
+        <div id="smallNav">
+            <!-- logo & menu icon -->
+            <nav class="logo-and-bars">
                 <a href="../index.html" class="logo">
                     <img src="../img/logos/logo.svg" alt="Logo Vivian">
                 </a>
+
                 <i class="fa-solid fa-bars"></i>
             </nav>
-        </div>
-    </header>
 
-    <header id="bigNav">
-        <div class="container">
-            <a href="../index.html" class="logo">
-                <img src="../img/logos/logo.svg" alt="Logo Vivian">
-            </a>
-
-            <nav>
+            <!-- menu links -->
+            <nav class="links">
                 <ul>
                     <li><a href="../index.html">Work</a></li>
                     <li><a href="../about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+        </div>
+
+        <div id="bigNav">
+            <div class="container">
+                <a href="../index.html" class="logo">
+                    <img src="../img/logos/logo.svg" alt="Logo Vivian">
+                </a>
+
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Work</a></li>
+                        <li><a href="../about.html">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
