Update directory paths

--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -9,7 +9,7 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <link rel="icon" type="image/x-icon" href="img/logos/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../img/logos/favicon.png">
     <script src="https://kit.fontawesome.com/bfcbb8f6a3.js" crossorigin="anonymous"></script>
     <title>UI Portfolio | Healthy Eats</title>
 </head>
