Add avatar image

--- a/about.html
+++ b/about.html
@@ -68,10 +68,9 @@
 
         <div class="container">
             <div>
-                <picture>
-                    <source media="(min-width:992px)" srcset="img/self-portrait/big-screens/self-portrait.webp">
-                    <img src="img/self-portrait/small-screens/self-portrait.webp" alt="Image of Vivian.">
-                </picture>
+                <div class="avatar">
+                    <img src="img/self-portrait/avatar.svg" alt="Avatar of Vivian.">
+                </div>
 
                 <div class="row self-info-container">
                     <div class="story-column">
