--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -34,7 +34,7 @@
             <!-- menu links -->
             <nav class="links">
                 <ul>
-                    <li><a href="../index.html">Work</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="../about.html">About</a></li>
                     <li><a href="../contact.html">Contact</a></li>
                 </ul>
@@ -50,7 +50,7 @@
 
                 <nav aria-label="primary navigation">
                     <ul>
-                        <li><a href="../index.html">Work</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="../about.html">About</a></li>
                         <li><a href="../contact.html">Contact</a></li>
                     </ul>
