Add span elements for "Skills" keyword.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                             <h3>Stitched</h3>
 
                             <p>
-                                A vintage clothing app designed for buying and selling vintage clothes. Skills: Figma,
+                                A vintage clothing app designed for buying and selling vintage clothes.
+                                <span>Skills:</span> Figma,
                                 Balsamiq, Low, Mid, High Fidelity Wireframing, Mockups, Style Guides, Mood Boards,
                                 Iconography.
                             </p>
@@ -124,11 +125,9 @@
                             <h3>Healthy Eats</h3>
 
                             <p>
-                                A recipes responsive web app designed for finding recipes to cook. Skills: Figma,
-                                Balsamiq,
-                                Low, Mid, High Fidelity Wireframing, Mockups, Style Guides, Mood Boards, Iconography,
-                                User
-                                Flow/Activity Diagram.
+                                A recipes responsive web app designed for finding recipes to cook. <span>Skills:</span>
+                                Figma, Balsamiq, Low, Mid, High Fidelity Wireframing, Mockups, Style Guides, Mood
+                                Boards, Iconography, User Flow/Activity Diagram.
                             </p>
 
                             <a href="projects/healthy-eats.html" class="button">Read more</a>
@@ -150,8 +149,8 @@
 
                             <p>
                                 A movie ticket booking native app designed for both iOS and Android phones.
-                                Skills: Figma, Balsamiq, Low, Mid, High Fidelity Wireframing, Mockups, Prototyping, User
-                                Flow/Activity Diagram.
+                                <span>Skills:</span> Figma, Balsamiq, Low, Mid, High Fidelity Wireframing, Mockups,
+                                Prototyping, User Flow/Activity Diagram.
                             </p>
 
                             <a href="projects/cinemagic.html" class="button">Read more</a>
@@ -172,10 +171,9 @@
                             <h3>FrugalityFirst</h3>
 
                             <p>
-                                A money saving tool responsive web app design for helping users save money. Skills:
-                                Figma,
-                                Balsamiq, Low, Mid High Fidelity Wireframing, Mockups, Prototyping, Style Guides,
-                                Iconography, User Flow/Activity Diagram.
+                                A money saving tool responsive web app design for helping users save money.
+                                <span>Skills:</span> Figma, Balsamiq, Low, Mid High Fidelity Wireframing, Mockups,
+                                Prototyping, Style Guides, Iconography, User Flow/Activity Diagram.
                             </p>
 
                             <a href="projects/frugalityfirst.html" class="button">Read more</a>
