Add user flow diagram and user personas

--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -105,6 +105,39 @@
                         </div>
                     </div>
 
+                    <!-- user flow -->
+                    <div class="project-spacing">
+                        <div>
+                            <h3>User Flow</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                Google Drawings was used to create the user flow. It shows how users can move from one
+                                webpage to the next, on the recipe app.
+                            </p>
+
+                            <p>
+                                Users were interviewed to find out what they wanted from a recipe app. User personas
+                                were created from these responses.
+                            </p>
+                        </div>
+
+                        <div class="user-research">
+                            <img src="../img/healthy-eats/ux/user-flow/image-user-flow.webp"
+                                alt="Healthy Eats user flow.">
+
+                            <img src="../img/healthy-eats/ux/user-personas/user-persona-1.webp"
+                                alt="Healthy Eats user persona.">
+
+                            <img src="../img/healthy-eats/ux/user-personas/user-persona-2.webp"
+                                alt="Healthy Eats user persona.">
+
+                            <img src="../img/healthy-eats/ux/user-personas/user-persona-3.webp"
+                                alt="Healthy Eats user persona.">
+                        </div>
+                    </div>
+
                     <!-- low fi -->
                     <div class="project-spacing">
                         <div>
