Add user flow diagram

--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -104,6 +104,25 @@
                         </div>
                     </div>
 
+                    <!-- user flow -->
+                    <div class="project-spacing">
+                        <div>
+                            <h3>User Flow</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                Google Drawings was used to create the user flow. It shows how users can move from one
+                                webpage to the next on the movie ticket booking app.
+                            </p>
+                        </div>
+
+                        <div class="user-research">
+                            <img src="../img/cinemagic/ux/user-flow/image-user-flow.webp"
+                                alt="Cinemagic user flow.">
+                        </div>
+                    </div>
+
                     <!-- low fi -->
                     <div class="project-spacing">
                         <div>
