--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -104,7 +104,7 @@
                         </div>
                     </div>
 
-                    <!-- user flow -->
+                    <!-- user research -->
                     <div class="project-spacing">
                         <div>
                             <h3>User Flow</h3>
