--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -105,7 +105,7 @@
                         </div>
                     </div>
 
-                    <!-- user flow -->
+                    <!-- user research -->
                     <div class="project-spacing">
                         <div>
                             <h3>User Flow</h3>
