--- a/contact.html
+++ b/contact.html
@@ -23,12 +23,12 @@
         <!-- mobile nav -->
         <div id="smallNav">
             <!-- logo & menu icon -->
-            <nav class="logo-and-bars">
+            <nav class="logo-and-bars" aria-label="toggle menu">
                 <a href="index.html" class="logo">
                     <img src="img/logos/logo.svg" alt="Logo Vivian">
                 </a>
 
-                <i aria-label="toggle menu" class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars"></i>
             </nav>
 
             <!-- menu links -->
