--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -23,12 +23,12 @@
         <!-- mobile nav -->
         <div id="smallNav">
             <!-- logo & menu icon -->
-            <nav class="logo-and-bars">
+            <nav class="logo-and-bars" aria-label="toggle menu">
                 <a href="../index.html" class="logo">
                     <img src="../img/logos/logo.svg" alt="Logo Vivian">
                 </a>
 
-                <i aria-label="toggle menu" class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-bars"></i>
             </nav>
 
             <!-- menu links -->
@@ -118,8 +118,7 @@
                         </div>
 
                         <div class="user-research">
-                            <img src="../img/cinemagic/ux/user-flow/image-user-flow.webp"
-                                alt="Cinemagic user flow.">
+                            <img src="../img/cinemagic/ux/user-flow/image-user-flow.webp" alt="Cinemagic user flow.">
                         </div>
                     </div>
 
