Add google analytics code

--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -14,6 +14,17 @@
     <title>UI Portfolio | Cinemagic</title>
 </head>
 
+<!-- google analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CYSY0YB9N1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-CYSY0YB9N1');
+</script>
+
 <body id="cinemagicPage">
 
     <header>
