Edit alt messages

--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -266,10 +266,10 @@
                             <img src="../img/stitched/mockups/5-image-product.png" alt="Stitched 'product' mockup">
 
                             <img src="../img/stitched/mockups/6-image-customer-reviews.png"
-                                alt="Stitched 'customer-reviews' mockup">
+                                alt="Stitched 'customer reviews' mockup">
 
                             <img src="../img/stitched/mockups/7-image-your-review.png"
-                                alt="Stitched 'your-review' mockup">
+                                alt="Stitched 'your review' mockup">
 
                             <img src="../img/stitched/mockups/8-image-basket.png" alt="Stitched 'basket' mockup">
 
