--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -28,6 +28,7 @@
                     <img src="../img/logos/logo.svg" alt="Logo Vivian">
                 </a>
 
+                <i class="fa-solid fa-xmark hide-icon"></i>
                 <i class="fa-solid fa-bars"></i>
             </nav>
 
